--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=kelana
 
-kelana.data_dir=${DATA_DIR:.}
-kelana.backup_dir=${BACKUP_DIR:${kelana.data_dir}}
-kelana.db_path=${DB_PATH:${kelana.data_dir}/kelana.db}
+kelana.backup_dir=${BACKUP_DIR:.}
+kelana.db_host=${DB_HOST}
+kelana.db_port=${DB_PORT:5432}
+kelana.db_user=${DB_USER}
+kelana.db_password=${DB_PASSWORD}
+kelana.db_name=${DB_NAME:${kelana.db_user}}
 kelana.base_url=${VITE_BASE_URL:http://localhost:5173}
 
 # spring
