--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,11 +148,10 @@ jobs:
           name: webui-production-files
           path: ./webui/dist
 
-      - uses: graalvm/setup-graalvm@v1
+      - uses: actions/setup-java@v5
         with:
+          distribution: 'temurin'
           java-version: '21'
-          distribution: 'graalvm'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare
         run: |
@@ -176,7 +175,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build
-        run: mvn native:compile -Pnative -Dmaven.test.skip
+        run: mvn clean package -Dmaven.test.skip
 
       - name: Build Docker image
         id: build-image
