--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,8 @@ jobs:
           - 5432:5432
         # Provide the password for postgres
         env:
-          POSTGRES_USER: kelana
-          POSTGRES_PASSWORD: kelana
+          POSTGRES_USER: kelana_test
+          POSTGRES_PASSWORD: kelana_test
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -85,10 +85,6 @@ jobs:
           MQTT_ENABLE: true
           MQTT_SERVER: tcp://127.0.0.1:1883
           DB_HOST: 127.0.0.1
-          DB_USER: kelana
-          DB_PASSWORD: kelana
-          ADMIN_USERNAME: test
-          ADMIN_PASSWORD: test
           JWT_SECRET: jwt-secret-for-test
           JWT_REFRESH_SECRET: jwt-refresh-secret-for-test
 
